pgmq-rs/src/install/embedded/snapshots/pgmq__install__embedded__tests__migrations_script__get_scripts_from_dir_not_found.snap
---
source: src/install/embedded/mod.rs
expression: script
---
Err(
    InstallationError(
        "Migration script file not found: pgmq--111.111.111--222.222.222.sql",
    ),
)
